# ML-Master

./: .gitignore  README.md  main.py  pyproject.toml
src/: local_scorer.py
src/ml_master/: core.py  explorer.py  main.py  reasoner.py  sandbox.py
titanic/: task_description.txt
titanic/generated_submissions/: baseline_submission.py  solution_node_1.py  solution_node_1_Draft.py  solution_node_2.py  solution_node_2_Draft.py  solution_node_2_Improve.py
